set FPGA SPI mode

--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -464,11 +464,12 @@ RCC.VCOSAIOutputFreq_Value=384000000
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CLKPhase=SPI_PHASE_1EDGE
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate=27.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
