--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -16,9 +16,11 @@ FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x20404768
+I2C2.I2C_Fall_Time=25
+I2C2.I2C_Rise_Time=25
 I2C2.I2C_Speed_Mode=I2C_Fast
-I2C2.IPParameters=I2C_Speed_Mode,Timing
-I2C2.Timing=0x6000030D
+I2C2.IPParameters=Timing,I2C_Speed_Mode,I2C_Rise_Time,I2C_Fall_Time
+I2C2.Timing=0x00601B5E
 I2C3.IPParameters=Timing,Timeout
 I2C3.Timeout=0x00008293
 I2C3.Timing=0x20404768
@@ -117,12 +119,16 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0/WKUP.GPIOParameters=GPIO_Label
-PA0/WKUP.GPIO_Label=FPGA_UART_CTS
+PA0/WKUP.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA0/WKUP.GPIO_Mode=GPIO_MODE_AF_PP
+PA0/WKUP.GPIO_PuPd=GPIO_NOPULL
+PA0/WKUP.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0/WKUP.Locked=true
 PA0/WKUP.Signal=USART2_CTS
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=FPGA_UART_RTS
+PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA1.GPIO_Mode=GPIO_MODE_AF_PP
+PA1.GPIO_PuPd=GPIO_NOPULL
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
 PA1.Signal=USART2_RTS
 PA13.Locked=true
@@ -134,60 +140,76 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
 PA15.Mode=JTAG_5_pins
 PA15.Signal=SYS_JTDI
-PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=FPGA_UART_TX
+PA2.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PA2.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA2.GPIO_PuPd=GPIO_NOPULL
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=FPGA_UART_RX
+PA3.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PA3.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA3.GPIO_PuPd=GPIO_NOPULL
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=FPGA_NSS
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA4.GPIO_PuPd=GPIO_NOPULL
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=FPGA_SCK
-PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PA5.GPIO_PuPd=GPIO_NOPULL
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=FPGA_MISO
-PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA6.GPIO_Mode=GPIO_MODE_AF_PP
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=FPGA_MOSI
-PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA7.GPIO_Mode=GPIO_MODE_AF_PP
+PA7.GPIO_PuPd=GPIO_NOPULL
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PA8.GPIO_Label=PA_SCL
-PA8.GPIO_PuPdOD=GPIO_NOPULL
+PA8.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PA8.GPIO_Mode=GPIO_MODE_AF_OD
+PA8.GPIO_PuPdOD=GPIO_PULLUP
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
 PA8.Mode=SMBus-two-wire-Interface
 PA8.Signal=I2C3_SCL
-PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=FPGA_CORE_PGOOD
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PB0.GPIO_Mode=GPIO_MODE_INPUT
+PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.Locked=true
 PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=PLL_M3
-PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PB1.GPIO_Mode=GPIO_MODE_INPUT
+PB1.GPIO_PuPd=GPIO_NOPULL
 PB1.Locked=true
 PB1.Signal=GPIO_Input
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=TTY_TX
+PB10.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PB10.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PB10.GPIO_PuPd=GPIO_NOPULL
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Locked=true
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
-PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=TTY_RX
+PB11.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
+PB11.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PB11.GPIO_PuPd=GPIO_NOPULL
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB11.Locked=true
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
@@ -197,43 +219,61 @@ PB3.Signal=SYS_JTDO-SWO
 PB4.Locked=true
 PB4.Mode=JTAG_5_pins
 PB4.Signal=SYS_JTRST
-PB6.GPIOParameters=GPIO_FM6,GPIO_PuPdOD,GPIO_Label
+PB6.GPIOParameters=GPIO_FM6,GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
 PB6.GPIO_FM6=__NULL
-PB6.GPIO_Label=PB_SCL
-PB6.GPIO_PuPdOD=GPIO_NOPULL
+PB6.GPIO_Mode=GPIO_MODE_AF_OD
+PB6.GPIO_PuPdOD=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
-PB9.GPIOParameters=GPIO_PuPdOD,GPIO_Label,GPIO_FM9
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode,GPIO_FM9
 PB9.GPIO_FM9=__NULL
-PB9.GPIO_Label=PB_SDA
-PB9.GPIO_PuPdOD=GPIO_NOPULL
+PB9.GPIO_Mode=GPIO_MODE_AF_OD
+PB9.GPIO_PuPdOD=GPIO_PULLUP
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=PLL_RESET_B
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC0.GPIO_PuPd=GPIO_NOPULL
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC0.Locked=true
+PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=PLL_M4
+PC1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC1.GPIO_PuPd=GPIO_NOPULL
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC1.Locked=true
+PC1.PinState=GPIO_PIN_RESET
 PC1.Signal=GPIO_Output
-PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=ON_1_0V_1_2V
+PC5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC5.GPIO_PuPd=GPIO_NOPULL
+PC5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC5.Locked=true
+PC5.PinState=GPIO_PIN_RESET
 PC5.Signal=GPIO_Output
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LED_YELLOW_B
+PC6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC6.GPIO_PuPd=GPIO_NOPULL
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC6.Locked=true
+PC6.PinState=GPIO_PIN_RESET
 PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=LED_GREEN_B
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC7.GPIO_PuPd=GPIO_NOPULL
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_RESET
 PC7.Signal=GPIO_Output
-PC9.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PC9.GPIO_Label=PA_SDA
-PC9.GPIO_PuPdOD=GPIO_NOPULL
+PC9.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PC9.GPIO_Mode=GPIO_MODE_AF_OD
+PC9.GPIO_PuPdOD=GPIO_PULLUP
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC9.Locked=true
 PC9.Mode=SMBus-two-wire-Interface
 PC9.Signal=I2C3_SDA
@@ -245,124 +285,175 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD11.GPIOParameters=GPIO_Label
-PD11.GPIO_Label=TTY_CTS
+PD11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PD11.GPIO_Mode=GPIO_MODE_AF_PP
+PD11.GPIO_PuPd=GPIO_NOPULL
+PD11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD11.Locked=true
 PD11.Signal=USART3_CTS
-PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=TTY_RTS
+PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PD12.GPIO_Mode=GPIO_MODE_AF_PP
+PD12.GPIO_PuPd=GPIO_NOPULL
+PD12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD12.Locked=true
 PD12.Signal=USART3_RTS
-PE10.GPIOParameters=GPIO_Label
-PE10.GPIO_Label=ADT_CS_B2
+PE10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE10.GPIO_PuPd=GPIO_NOPULL
+PE10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE10.Locked=true
+PE10.PinState=GPIO_PIN_RESET
 PE10.Signal=GPIO_Output
-PE11.GPIOParameters=GPIO_Label
-PE11.GPIO_Label=ADT_CS_B0
+PE11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE11.GPIO_PuPd=GPIO_NOPULL
+PE11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE11.Locked=true
+PE11.PinState=GPIO_PIN_RESET
 PE11.Signal=GPIO_Output
-PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE12.GPIO_Label=ADT_SCLK
-PE12.GPIO_PuPd=GPIO_PULLUP
+PE12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE12.GPIO_Mode=GPIO_MODE_AF_PP
+PE12.GPIO_PuPd=GPIO_NOPULL
+PE12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE12.Locked=true
 PE12.Mode=Full_Duplex_Master
 PE12.Signal=SPI4_SCK
-PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE13.GPIO_Label=ADT_DOUT
-PE13.GPIO_PuPd=GPIO_PULLUP
+PE13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE13.GPIO_Mode=GPIO_MODE_AF_PP
+PE13.GPIO_PuPd=GPIO_NOPULL
+PE13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE13.Locked=true
 PE13.Mode=Full_Duplex_Master
 PE13.Signal=SPI4_MISO
-PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE14.GPIO_Label=ADT_DIN
-PE14.GPIO_PuPd=GPIO_PULLUP
+PE14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE14.GPIO_Mode=GPIO_MODE_AF_PP
+PE14.GPIO_PuPd=GPIO_NOPULL
+PE14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE14.Locked=true
 PE14.Mode=Full_Duplex_Master
 PE14.Signal=SPI4_MOSI
-PE15.GPIOParameters=GPIO_Label
-PE15.GPIO_Label=ADT_CS_B3
+PE15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE15.GPIO_PuPd=GPIO_NOPULL
+PE15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE15.Locked=true
+PE15.PinState=GPIO_PIN_RESET
 PE15.Signal=GPIO_Output
-PE7.GPIOParameters=GPIO_Label
-PE7.GPIO_Label=ADT_CS_B1
+PE7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PE7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PE7.GPIO_PuPd=GPIO_NOPULL
+PE7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE7.Locked=true
+PE7.PinState=GPIO_PIN_RESET
 PE7.Signal=GPIO_Output
-PF0.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PF0.GPIO_Label=CONFIG_IIC_SDA
-PF0.GPIO_PuPdOD=GPIO_NOPULL
+PF0.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PF0.GPIO_Mode=GPIO_MODE_AF_OD
+PF0.GPIO_PuPdOD=GPIO_PULLUP
+PF0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
-PF1.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PF1.GPIO_Label=CONFIG_IIC_SCL
-PF1.GPIO_PuPdOD=GPIO_NOPULL
+PF1.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PF1.GPIO_Mode=GPIO_MODE_AF_OD
+PF1.GPIO_PuPdOD=GPIO_PULLUP
+PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
-PF10.GPIOParameters=GPIO_Label
-PF10.GPIO_Label=PLL_M6
+PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF10.GPIO_PuPd=GPIO_NOPULL
+PF10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF10.Locked=true
+PF10.PinState=GPIO_PIN_RESET
 PF10.Signal=GPIO_Output
-PF14.GPIOParameters=GPIO_Label
-PF14.GPIO_Label=LTM_PGOOD
+PF14.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF14.GPIO_Mode=GPIO_MODE_INPUT
+PF14.GPIO_PuPd=GPIO_NOPULL
 PF14.Locked=true
 PF14.Signal=GPIO_Input
-PF3.GPIOParameters=GPIO_Label
-PF3.GPIO_Label=VME_DET_B
+PF3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF3.GPIO_Mode=GPIO_MODE_INPUT
+PF3.GPIO_PuPd=GPIO_NOPULL
 PF3.Locked=true
 PF3.Signal=GPIO_Input
-PF7.GPIOParameters=GPIO_Label
-PF7.GPIO_Label=SYSTEM_RDY
+PF7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF7.GPIO_PuPd=GPIO_NOPULL
+PF7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF7.Locked=true
+PF7.PinState=GPIO_PIN_RESET
 PF7.Signal=GPIO_Output
-PF8.GPIOParameters=GPIO_Label
-PF8.GPIO_Label=PLL_M0
+PF8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PF8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PF8.GPIO_PuPd=GPIO_NOPULL
 PF8.Locked=true
 PF8.Signal=GPXTI8
-PF9.GPIOParameters=GPIO_Label
-PF9.GPIO_Label=PLL_M5
+PF9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PF9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF9.GPIO_PuPd=GPIO_NOPULL
+PF9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF9.Locked=true
+PF9.PinState=GPIO_PIN_RESET
 PF9.Signal=GPIO_Output
-PG6.GPIOParameters=GPIO_Label
-PG6.GPIO_Label=LED_RED_B
+PG6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PG6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PG6.GPIO_PuPd=GPIO_NOPULL
+PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG6.Locked=true
+PG6.PinState=GPIO_PIN_RESET
 PG6.Signal=GPIO_Output
 PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-PH10.GPIOParameters=GPIO_Label
-PH10.GPIO_Label=MON_SMB_ALERT_B
+PH10.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH10.GPIO_Mode=GPIO_MODE_INPUT
+PH10.GPIO_PuPd=GPIO_NOPULL
 PH10.Locked=true
 PH10.Signal=GPIO_Input
-PH11.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PH11.GPIO_Label=MON_SMB_CLK
-PH11.GPIO_PuPdOD=GPIO_NOPULL
+PH11.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PH11.GPIO_Mode=GPIO_MODE_AF_OD
+PH11.GPIO_PuPdOD=GPIO_PULLUP
+PH11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH11.Locked=true
 PH11.Mode=I2C
 PH11.Signal=I2C4_SCL
-PH12.GPIOParameters=GPIO_PuPdOD,GPIO_Label
-PH12.GPIO_Label=MON_SMB_DAT
-PH12.GPIO_PuPdOD=GPIO_NOPULL
+PH12.GPIOParameters=GPIO_Speed,GPIO_PuPdOD,GPIO_Mode
+PH12.GPIO_Mode=GPIO_MODE_AF_OD
+PH12.GPIO_PuPdOD=GPIO_PULLUP
+PH12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH12.Locked=true
 PH12.Mode=I2C
 PH12.Signal=I2C4_SDA
-PH8.GPIOParameters=GPIO_Label
-PH8.GPIO_Label=MON_SMB_SW_RST_B
+PH8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PH8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PH8.GPIO_PuPd=GPIO_NOPULL
+PH8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PH8.Locked=true
+PH8.PinState=GPIO_PIN_RESET
 PH8.Signal=GPIO_Output
-PJ0.GPIOParameters=GPIO_Label
-PJ0.GPIO_Label=ON_1_5V
+PJ0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PJ0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PJ0.GPIO_PuPd=GPIO_NOPULL
+PJ0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PJ0.Locked=true
+PJ0.PinState=GPIO_PIN_RESET
 PJ0.Signal=GPIO_Output
-PJ1.GPIOParameters=GPIO_Label
-PJ1.GPIO_Label=ON_3_3V
+PJ1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PJ1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PJ1.GPIO_PuPd=GPIO_NOPULL
+PJ1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PJ1.Locked=true
+PJ1.PinState=GPIO_PIN_RESET
 PJ1.Signal=GPIO_Output
-PJ2.GPIOParameters=GPIO_Label
-PJ2.GPIO_Label=ON_5V
+PJ2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PJ2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PJ2.GPIO_PuPd=GPIO_NOPULL
+PJ2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PJ2.Locked=true
+PJ2.PinState=GPIO_PIN_RESET
 PJ2.Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
