--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -118,6 +118,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA0/WKUP.GPIO_Mode=GPIO_MODE_AF_PP
@@ -483,7 +484,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_SMBUS_Init-I2C3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI4_Init-SPI4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_SMBUS_Init-I2C3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI4_Init-SPI4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-LL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
