--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -1,18 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.FootprintOK=true
-FREERTOS.INCLUDE_vTaskCleanUpResources=1
-FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,configMINIMAL_STACK_SIZE,configUSE_COUNTING_SEMAPHORES,configUSE_TICK_HOOK,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,FootprintOK,configUSE_TIMERS,INCLUDE_vTaskCleanUpResources,INCLUDE_vTaskDelayUntil,configGENERATE_RUN_TIME_STATS
-FREERTOS.Tasks01=defaultTask,0,130,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS,Tasks01
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
-FREERTOS.configMINIMAL_STACK_SIZE=128
-FREERTOS.configTOTAL_HEAP_SIZE=0x20000
-FREERTOS.configUSE_COUNTING_SEMAPHORES=0
+FREERTOS.configTOTAL_HEAP_SIZE=131072
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
-FREERTOS.configUSE_TICK_HOOK=0
-FREERTOS.configUSE_TIMERS=0
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 I2C1.IPParameters=Timing
@@ -518,17 +511,17 @@ ProjectManager.DeviceId=STM32F769NIHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.15.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=true
-ProjectManager.HeapSize=0x20000
+ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Src
+ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=tdc72xvs4-rtos.ioc
 ProjectManager.ProjectName=tdc72xvs4-rtos
-ProjectManager.StackSize=0x2000
+ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
