--- a/cubemx/ttvxs-rtos.ioc
+++ b/cubemx/ttvxs-rtos.ioc
@@ -132,7 +132,7 @@ Mcu.Pin149=VP_ADC1_TempSens_Input
 Mcu.Pin15=PE5
 Mcu.Pin150=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin151=VP_LWIP_VS_Enabled
-Mcu.Pin152=VP_SYS_VS_tim1
+Mcu.Pin152=VP_SYS_VS_Systick
 Mcu.Pin153=VP_TIM2_VS_ControllerModeTrigger
 Mcu.Pin154=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin16=PE6
@@ -243,9 +243,6 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TimeBase=TIM1_UP_TIM10_IRQn
-NVIC.TimeBaseIP=TIM1
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -858,14 +855,14 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=ttvxs_cubemx.ioc
-ProjectManager.ProjectName=ttvxs_cubemx
+ProjectManager.ProjectFileName=ttvxs-rtos.ioc
+ProjectManager.ProjectName=ttvxs-rtos
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_USART2_UART_Init-USART2-false-LL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-true,19-MX_ADC1_Init-ADC1-false-HAL-true,20-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -1044,8 +1041,8 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR1
 VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
 VP_TIM2_VS_ControllerModeTrigger.Mode=Trigger Mode
