--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -1,15 +1,20 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.IPParameters=configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS,Tasks01
+FREERTOS.IPParameters=configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS,Tasks01,configUSE_RECURSIVE_MUTEXES
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
-FREERTOS.configTOTAL_HEAP_SIZE=131072
+FREERTOS.configTOTAL_HEAP_SIZE=0x40000
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configUSE_RECURSIVE_MUTEXES=1
 FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
-I2C1.IPParameters=Timing
-I2C1.Timing=0x20404768
+I2C1.I2C_Fall_Time=25
+I2C1.I2C_Rise_Time=25
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,OwnAddress,I2C_Fall_Time,I2C_Rise_Time,I2C_Speed_Mode
+I2C1.OwnAddress=0x33
+I2C1.Timing=0x00601B5E
 I2C2.I2C_Fall_Time=25
 I2C2.I2C_Rise_Time=25
 I2C2.I2C_Speed_Mode=I2C_Fast
@@ -104,6 +109,8 @@ MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -525,7 +532,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_SMBUS_Init-I2C3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI4_Init-SPI4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-LL-true,12-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C3_SMBUS_Init-I2C3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI4_Init-SPI4-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-LL-true,12-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
