--- a/cubemx/ttvxs-rtos.ioc
+++ b/cubemx/ttvxs-rtos.ioc
@@ -9,8 +9,9 @@ CAN2.BS1=CAN_BS1_2TQ
 CAN2.BS2=CAN_BS2_1TQ
 CAN2.CalculateTimeQuantum=320.0
 CAN2.IPParameters=CalculateTimeQuantum,BS1,BS2
-ETH.IPParameters=MediaInterface
+ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.PhyAddress=0
 FREERTOS.IPParameters=Tasks01,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,configUSE_STATS_FORMATTING_FUNCTIONS,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
@@ -53,15 +54,16 @@ Mcu.IP11=LWIP
 Mcu.IP12=NVIC
 Mcu.IP13=QUADSPI
 Mcu.IP14=RCC
-Mcu.IP15=SDMMC1
-Mcu.IP16=SPI2
-Mcu.IP17=SPI5
-Mcu.IP18=SYS
-Mcu.IP19=TIM2
+Mcu.IP15=RTC
+Mcu.IP16=SDMMC1
+Mcu.IP17=SPI2
+Mcu.IP18=SPI5
+Mcu.IP19=SYS
 Mcu.IP2=CORTEX_M7
-Mcu.IP20=USART1
-Mcu.IP21=USART2
-Mcu.IP22=USART6
+Mcu.IP20=TIM2
+Mcu.IP21=USART1
+Mcu.IP22=USART2
+Mcu.IP23=USART6
 Mcu.IP3=ETH
 Mcu.IP4=FMC
 Mcu.IP5=FREERTOS
@@ -69,7 +71,7 @@ Mcu.IP6=GFXSIMULATOR
 Mcu.IP7=I2C1
 Mcu.IP8=I2C2
 Mcu.IP9=I2C3
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32F769NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -132,9 +134,11 @@ Mcu.Pin149=VP_ADC1_TempSens_Input
 Mcu.Pin15=PE5
 Mcu.Pin150=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin151=VP_LWIP_VS_Enabled
-Mcu.Pin152=VP_SYS_VS_Systick
-Mcu.Pin153=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin154=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin152=VP_RTC_VS_RTC_Activate
+Mcu.Pin153=VP_RTC_VS_RTC_Calendar
+Mcu.Pin154=VP_SYS_VS_Systick
+Mcu.Pin155=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin156=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin16=PE6
 Mcu.Pin17=PG13
 Mcu.Pin18=PB9
@@ -227,7 +231,7 @@ Mcu.Pin96=PD9
 Mcu.Pin97=PD8
 Mcu.Pin98=PC0
 Mcu.Pin99=PC1
-Mcu.PinsNb=155
+Mcu.PinsNb=157
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F769NIHx
@@ -864,7 +868,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_USART2_UART_Init-USART2-false-LL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-true,19-MX_ADC1_Init-ADC1-false-HAL-true,20-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_USART2_UART_Init-USART2-false-LL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-true,19-MX_ADC1_Init-ADC1-false-HAL-true,20-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,21-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=50000000
@@ -889,7 +893,7 @@ RCC.I2C2Freq_Value=50000000
 RCC.I2C3Freq_Value=50000000
 RCC.I2C4Freq_Value=50000000
 RCC.I2SFreq_Value=200000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLDSIVCOFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RCC_RTC_Clock_Source_FROM_HSE,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=100000000
 RCC.LPTIM1Freq_Value=50000000
 RCC.LSE_VALUE=32768
@@ -897,21 +901,27 @@ RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=200000000
 RCC.PLLCLKFreq_Value=200000000
 RCC.PLLDSIVCOFreq_Value=1000000000
+RCC.PLLI2SN=400
 RCC.PLLI2SPCLKFreq_Value=200000000
 RCC.PLLI2SQCLKFreq_Value=200000000
 RCC.PLLI2SRCLKFreq_Value=200000000
 RCC.PLLI2SRoutputFreq_Value=200000000
-RCC.PLLM=12
+RCC.PLLM=25
+RCC.PLLN=400
 RCC.PLLQ=8
 RCC.PLLQCLKFreq_Value=50000000
 RCC.PLLQoutputFreq_Value=50000000
 RCC.PLLRFreq_Value=200000000
+RCC.PLLSAIN=400
 RCC.PLLSAIPCLKFreq_Value=200000000
 RCC.PLLSAIQCLKFreq_Value=200000000
 RCC.PLLSAIRCLKFreq_Value=200000000
 RCC.PLLSAIoutputFreq_Value=200000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV25
 RCC.RNGFreq_Value=50000000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_HSE_DIV25
+RCC.RTCFreq_Value=1000000
 RCC.SAI1Freq_Value=200000000
 RCC.SAI2Freq_Value=200000000
 RCC.SDMMC2Freq_Value=200000000
@@ -930,9 +940,11 @@ RCC.USART3Freq_Value=50000000
 RCC.USART6Freq_Value=100000000
 RCC.USBFreq_Value=50000000
 RCC.VCOI2SOutputFreq_Value=400000000
-RCC.VCOInputFreq_Value=2083333.3333333333
+RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=400000000
 RCC.VCOSAIOutputFreq_Value=400000000
+RTC.Format=RTC_FORMAT_BIN
+RTC.IPParameters=Format
 SH.FMC_A0.0=FMC_A0,12b-sda1
 SH.FMC_A0.ConfNb=1
 SH.FMC_A1.0=FMC_A1,12b-sda1
@@ -1042,6 +1054,10 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR1
