--- a/cubemx/ttvxs-rtos.ioc
+++ b/cubemx/ttvxs-rtos.ioc
@@ -248,6 +248,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -255,7 +256,7 @@ PA1.GPIO_Label=RMII_REF_CLK
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=MCU_RS232_TX
+PA10.GPIO_Label=MCU_RS232_RX
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -868,7 +869,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-HAL-true,16-MX_USART2_UART_Init-USART2-false-LL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-true,19-MX_ADC1_Init-ADC1-false-HAL-true,20-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,21-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN2_Init-CAN2-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,15-MX_USART1_UART_Init-USART1-false-LL-true,16-MX_USART2_UART_Init-USART2-false-LL-true,17-MX_USART6_UART_Init-USART6-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-true,19-MX_ADC1_Init-ADC1-false-HAL-true,20-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,21-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=50000000
@@ -1040,7 +1041,10 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPolarity,CLKPhase
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_ENABLE
+USART1.IPParameters=VirtualMode-Asynchronous,AutoBaudRateEnableParam,TxPinLevelInvertParam,RxPinLevelInvertParam
+USART1.RxPinLevelInvertParam=ADVFEATURE_RXINV_ENABLE
+USART1.TxPinLevelInvertParam=ADVFEATURE_TXINV_ENABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.AutoBaudRateEnableParam=UART_ADVFEATURE_AUTOBAUDRATE_ENABLE
 USART2.IPParameters=VirtualMode-Asynchronous,AutoBaudRateEnableParam,SwapParam
