vxsiic: interrupt-mode I2C1

--- a/cubemx/ttvxs-rtos.ioc
+++ b/cubemx/ttvxs-rtos.ioc
@@ -23,9 +23,9 @@ FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 I2C1.I2C_Fall_Time=25
 I2C1.I2C_Rise_Time=25
-I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.I2C_Speed_Mode=I2C_Fast_Plus
 I2C1.IPParameters=Timing,I2C_Speed_Mode,I2C_Rise_Time,I2C_Fall_Time
-I2C1.Timing=0x00601957
+I2C1.Timing=0x0030081D
 I2C2.I2C_Fall_Time=25
 I2C2.I2C_Rise_Time=25
 I2C2.I2C_Speed_Mode=I2C_Fast
@@ -241,6 +241,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
