--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -47,60 +47,67 @@ Mcu.Name=STM32F769NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PB4
 Mcu.Pin1=PB3
-Mcu.Pin10=PA8
-Mcu.Pin11=PH0/OSC_IN
-Mcu.Pin12=PC7
-Mcu.Pin13=PH1/OSC_OUT
-Mcu.Pin14=PF3
-Mcu.Pin15=PC6
-Mcu.Pin16=PG6
-Mcu.Pin17=PF7
-Mcu.Pin18=PF10
-Mcu.Pin19=PF9
+Mcu.Pin10=PH15
+Mcu.Pin11=PA10
+Mcu.Pin12=PF1
+Mcu.Pin13=PH14
+Mcu.Pin14=PC9
+Mcu.Pin15=PA8
+Mcu.Pin16=PH0/OSC_IN
+Mcu.Pin17=PC7
+Mcu.Pin18=PH1/OSC_OUT
+Mcu.Pin19=PF3
 Mcu.Pin2=PA15
-Mcu.Pin20=PF8
-Mcu.Pin21=PC0
-Mcu.Pin22=PC1
-Mcu.Pin23=PD12
-Mcu.Pin24=PH12
-Mcu.Pin25=PA1
-Mcu.Pin26=PA0/WKUP
-Mcu.Pin27=PA4
-Mcu.Pin28=PD11
-Mcu.Pin29=PH11
+Mcu.Pin20=PC6
+Mcu.Pin21=PG6
+Mcu.Pin22=PF7
+Mcu.Pin23=PF10
+Mcu.Pin24=PF9
+Mcu.Pin25=PF8
+Mcu.Pin26=PC0
+Mcu.Pin27=PC1
+Mcu.Pin28=PD12
+Mcu.Pin29=PH12
 Mcu.Pin3=PA14
-Mcu.Pin30=PA2
-Mcu.Pin31=PA6
-Mcu.Pin32=PA5
-Mcu.Pin33=PC5
-Mcu.Pin34=PF14
-Mcu.Pin35=PJ2
-Mcu.Pin36=PE11
-Mcu.Pin37=PE14
-Mcu.Pin38=PB10
-Mcu.Pin39=PH8
+Mcu.Pin30=PA1
+Mcu.Pin31=PA0/WKUP
+Mcu.Pin32=PA4
+Mcu.Pin33=PD11
+Mcu.Pin34=PH11
+Mcu.Pin35=PA2
+Mcu.Pin36=PA6
+Mcu.Pin37=PA5
+Mcu.Pin38=PC5
+Mcu.Pin39=PF14
 Mcu.Pin4=PA13
-Mcu.Pin40=PH10
-Mcu.Pin41=PA3
-Mcu.Pin42=PA7
-Mcu.Pin43=PB1
-Mcu.Pin44=PB0
-Mcu.Pin45=PJ0
-Mcu.Pin46=PJ1
-Mcu.Pin47=PE7
-Mcu.Pin48=PE10
-Mcu.Pin49=PE12
+Mcu.Pin40=PJ2
+Mcu.Pin41=PE11
+Mcu.Pin42=PE14
+Mcu.Pin43=PB10
+Mcu.Pin44=PH8
+Mcu.Pin45=PH10
+Mcu.Pin46=PA3
+Mcu.Pin47=PA7
+Mcu.Pin48=PB1
+Mcu.Pin49=PB0
 Mcu.Pin5=PB9
-Mcu.Pin50=PE15
-Mcu.Pin51=PE13
-Mcu.Pin52=PB11
-Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin54=VP_SYS_VS_tim1
+Mcu.Pin50=PJ0
+Mcu.Pin51=PJ1
+Mcu.Pin52=PE7
+Mcu.Pin53=PE10
+Mcu.Pin54=PE12
+Mcu.Pin55=PE15
+Mcu.Pin56=PE13
+Mcu.Pin57=PB11
+Mcu.Pin58=PB14
+Mcu.Pin59=PB15
 Mcu.Pin6=PB6
-Mcu.Pin7=PF0
-Mcu.Pin8=PF1
-Mcu.Pin9=PC9
-Mcu.PinsNb=55
+Mcu.Pin60=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin61=VP_SYS_VS_tim1
+Mcu.Pin7=PA12
+Mcu.Pin8=PA11
+Mcu.Pin9=PF0
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F769NIHx
@@ -136,6 +143,18 @@ PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
 PA1.Signal=USART2_RTS
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=ON_TDC_A
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=ON_TDC_B
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=ON_TDC_C
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Locked=true
 PA13.Mode=JTAG_5_pins
 PA13.Signal=SYS_JTMS-SWDIO
@@ -229,6 +248,14 @@ PB11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB11.Locked=true
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=FPGA_INIT_B
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=FPGA_DONE
+PB15.Locked=true
+PB15.Signal=GPIO_Input
 PB3.Locked=true
 PB3.Mode=JTAG_5_pins
 PB3.Signal=SYS_JTDO-SWO
@@ -472,6 +499,14 @@ PH12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH12.Locked=true
 PH12.Mode=I2C
 PH12.Signal=I2C4_SDA
+PH14.GPIOParameters=GPIO_Label
+PH14.GPIO_Label=LED_ERROR_B
+PH14.Locked=true
+PH14.Signal=GPIO_Output
+PH15.GPIOParameters=GPIO_Label
+PH15.GPIO_Label=LED_HEARTBEAT_B
+PH15.Locked=true
+PH15.Signal=GPIO_Output
 PH8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PH8.GPIO_Label=MON_SMB_SW_RST_B
 PH8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
