--- a/cubemx/tdc72xvs4-rtos.ioc
+++ b/cubemx/tdc72xvs4-rtos.ioc
@@ -120,6 +120,8 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C2_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C4_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C4_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
