CPU: Enabled prefetch and ART accelerator

--- a/cubemx/ttvxs-v1.1-rtos.ioc
+++ b/cubemx/ttvxs-v1.1-rtos.ioc
@@ -5,6 +5,11 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+CORTEX_M7.ART_ACCLERATOR_ENABLE=1
+CORTEX_M7.CPU_DCache=Enabled
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,CPU_ICache,CPU_DCache,PREFETCH_ENABLE
+CORTEX_M7.PREFETCH_ENABLE=1
 ETH.IPParameters=MediaInterface,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PhyAddress=0
