USART3.SwapParam=ADVFEATURE_SWAP_ENABLE

--- a/cubemx/tdc72vhl_v3.ioc
+++ b/cubemx/tdc72vhl_v3.ioc
@@ -431,7 +431,8 @@ SPI5.IPParameters=Mode,CalculateBaudRate,VirtualNSS,VirtualType,Direction,DataSi
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualNSS=VM_NSSHARD
 SPI5.VirtualType=VM_MASTER
-USART3.IPParameters=VirtualMode-Asynchronous,WordLength
+USART3.IPParameters=VirtualMode-Asynchronous,WordLength,SwapParam
+USART3.SwapParam=ADVFEATURE_SWAP_ENABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.WordLength=WORDLENGTH_8B
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
