--- a/cubemx/tdc72vhl_v3.ioc
+++ b/cubemx/tdc72vhl_v3.ioc
@@ -83,7 +83,7 @@ Mcu.Pin47=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin48=VP_RTC_VS_RTC_Activate
 Mcu.Pin49=VP_RTC_VS_RTC_Calendar
 Mcu.Pin5=PB4
-Mcu.Pin50=VP_SYS_VS_tim2
+Mcu.Pin50=VP_SYS_VS_tim1
 Mcu.Pin6=PB3
 Mcu.Pin7=PA15
 Mcu.Pin8=PA14
@@ -116,9 +116,9 @@ NVIC.SPI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SPI5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA13.Mode=JTAG_5_pins
@@ -441,6 +441,6 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=bmc-b2
